modify tmux nested shortcuts

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -103,7 +103,7 @@ bind -T root M-0 \
     set key-table nested \;\
     set status on \;\
     set status-format[0] $status_locked \;\
-    send-keys M-j \;\
+    send-keys M-n \;\
     refresh-client -S
 
 bind -T nested M-0 \
@@ -113,11 +113,11 @@ bind -T nested M-0 \
   set status-format[0] $status_info \;\
   set status-format[1] $status_window \;\
   set status-format[2] $status_user \;\
-  send-keys M-k \;\
+  send-keys M-m \;\
   refresh-client -S
 
-bind -T nested M-l choose-tree -Zs
-bind -T root   M-l choose-tree -Zs
+bind -T nested M-- choose-tree -Zs
+# bind -T root   M-- choose-tree -Zs
 
 if-shell 'test -n "$SSH_CLIENT"' \
     'source-file ~/.tmux/tmux.remote.conf'
